Need to process evolution results, for simulate invest action (I220).